# bmc-experiments

./: .gitmodules  README.md
rtic-testing/: Cargo.toml  Embed.toml  README.md  openocd.cfg
rtic-testing/.cargo/: config
rtic-testing/examples/: hello.rs  hello_rtic.rs  rtic_atsamd.rs  rtic_serial.rs  rtic_usb.rs
rtic-testing/src/: main.rs  main_old.rs  main_usb_led.rs
